--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
+    "canvas-senpai": "^0.1.6",
     "discord.js": "^12.3.1",
     "ffmpeg-static": "^4.2.7",
     "fs": "^0.0.2",
