--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
+    "ascii-table": "0.0.9",
     "canvas-senpai": "^0.1.6",
     "discord.js": "^12.3.1",
+    "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
     "fs": "^0.0.2",
     "lyrics-finder": "^21.3.3",
