--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "token": "NzQ2NDYyNzE2MDQ2MDgyMTA5.X0ArlA.Y4pmiIMt7vyD8ekHtbAAnPRgU1Q",
+  "token": "NzQ2NDYyNzE2MDQ2MDgyMTA5.X0ArlA.Y4pmiIMt7vyD8ekHtbAAnPRgU1Q", // token was regenerated
   "default_prefix": "f!"
 }
